--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <h1>barbearia</h1>
+    <p>Localizado na avenida colombo n.6847 jardim maringa na cidade de maringa</p>
 
 </body>
 
