--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 
 <body>
-<img src="banner.jpg">
 
     <h1>barbearia</h1>
     <p>Localizado na avenida colombo n.6847 jardim maringa na cidade de maringa</p>
 
+<p>oferecemos profissionais experientes e antenados as 
+    <img id="imagem1" scr="banner.jpg">
+</div>
+
+<div class="beneficios">
+    <ul>
 </body>
 
 </html>
